--- a/themes/hugo-serif/layouts/team/summary.html
+++ b/themes/hugo-serif/layouts/team/summary.html
@@ -13,8 +13,8 @@
     <div class="team-meta">
         <h2 class="team-name">{{ .Title }}</h2>
         <p class="team-description">{{ .Params.Jobtitle }}</p>
-        {{ if .Params.orcidurl }}
-        <a target="_blank" rel="noreferrer" href="{{ .Params.orcidurl }}">LinkedIn</a>
+        {{ if .Params.orcid }}
+        <a target="_blank" rel="noreferrer" href="{{ .Params.orcid }}">LinkedIn</a>
         {{ end }}
     </div>
     <div class="team-content"></div>
