--- a/layouts/shortcodes/badge.html
+++ b/layouts/shortcodes/badge.html
@@ -21,7 +21,7 @@
 <div class="altmetric-embed" data-badge-type="donut" data-badge-popover="bottom" {{if (.Get "src")}} data-doi="{{ .Get "src" }}" {{else}} data-altmetric-id="{{ index .Params 0 }}" {{end}}  data-hide-no-mentions="true"></div>
 </div>
 
-<div class="plumx"><a href="https://plu.mx/plum/a/?doi={{ .Get "src" }}" data-popup="left" data-size="medium" class="plumx-plum-print-popup" data-site="plum" data-hide-when-empty="true"></a></div>
+<div class="plumx"><a href="https://plu.mx/plum/a/?doi={{ .Get "src" }}" data-popup="bottom" data-size="medium" class="plumx-plum-print-popup" data-site="plum" data-hide-when-empty="true"></a></div>
 
 <div class="dimensions">
 <span class="__dimensions_badge_embed__" data-doi="{{ .Get "src" }}" data-legend="hover-left" data-style="small_circle" data-hide-zero-citations="true"></span>
