--- a/layouts/team/list.html
+++ b/layouts/team/list.html
@@ -56,6 +56,8 @@
 
 <div class="bottom-component">
     <div class="container">
+        <h2 style="text-align: center">2024</h2>
+        <img src="https://wang.wustl.edu/images/WangLab2024.jpg" alt="2023" class="responsive" />
         <h2 style="text-align: center">2023</h2>
         <img src="https://wang.wustl.edu/images/WangLab2023.jpg" alt="2023" class="responsive" />
         <h2 style="text-align: center">2022</h2>
