Update Alan & Xiaoyu's paper and Wanglab logo

--- a/themes/hugo-serif/layouts/partials/footer.html
+++ b/themes/hugo-serif/layouts/partials/footer.html
@@ -10,7 +10,7 @@
                             float: left;
                         }
                     </style>
-                    <img src="/image/logo/white_logo.png" alt="Wang Lab Logo" class="logo" />
+                    <img src="/image/logo/wanglab_logo_2024_transparent.png" alt="Wang Lab Logo" class="logo" />
                     <!--<h3 class="footer-title">{{.Site.Title}}</h3>-->
                     {{ partial "footer-menu" . }}
                 </div>
