--- a/themes/hugo-serif/layouts/index.html
+++ b/themes/hugo-serif/layouts/index.html
@@ -1,18 +1,28 @@
 {{ define "body_classes" }}page-home{{ end }}
 
 {{ define "main" }}
+
+<head>
+  <!-- Splide CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
+  <!-- Splide JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+</head>
+
+<body>
+
 <div class="intro">
   <div class="container">
     <div class="row justify-content-start">
       <div class="col-12 col-md-7 col-lg-6 order-2 order-md-1">
         {{ .Content }}
         {{ if .Site.Params.homepage.show_contact_box }}
-          {{ partial "call.html" (dict "site" .Site "context" . "show_button" "true") }}
+        {{ partial "call.html" (dict "site" .Site "context" . "show_button" "true") }}
         {{ end }}
       </div>
       {{ if .Params.intro_image }}
       <div class="col-12 col-md-5 col-lg-6 order-1 order-md-2 position-relative">
-        <img alt={{ .Title }} class="intro-image{{ if .Params.intro_image_absolute }} intro-image-absolute{{ end }}{{ if .Params.intro_image_hide_on_mobile }} intro-image-hide-mobile{{ end }}" src="{{ .Params.intro_image | relURL }}" />
+        <img alt="{{ .Title }}" class="intro-image{{ if .Params.intro_image_absolute }} intro-image-absolute{{ end }}{{ if .Params.intro_image_hide_on_mobile }} intro-image-hide-mobile{{ end }}" src="{{ .Params.intro_image | relURL }}" />
       </div>
       {{ end }}
     </div>
@@ -20,34 +30,65 @@
 </div>
 
 <style>
+  /* Set the carousel section to 80% width and center it */
+  #image-carousel {
+    width: 80%;
+    margin: 0 auto; /* Centers the carousel */
+  }
+
   .videoWrapper {
-  position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
-  height: 0;
-}
-.videoWrapper iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+  }
+  .videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+  .splide__slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    background-color: #000; /* Optional: To give a background color */
+  }
+  /* Optional: Add more customization for arrows or dots */
 </style>
 
-  <div class="container">
-    <div class="videoWrapper">
-      <!-- Copy & Pasted from YouTube -->
-      <iframe width="560" height="349" src="https://www.youtube.com/embed/BiR0C8DpleU" frameborder="0" allowfullscreen></iframe>
-    </div>
+<!-- Splide Carousel -->
+<div id="image-carousel" class="splide" aria-label="Introduction Videos">
+  <div class="splide__track">
+    <ul class="splide__list">
+      <li class="splide__slide">
+        <div class="container">
+          <div class="videoWrapper">
+            <!-- YouTube video -->
+            <iframe src="https://www.youtube.com/embed/BiR0C8DpleU" allowfullscreen></iframe>
+          </div>
+        </div>
+      </li>
+      <li class="splide__slide">
+        <div class="container">
+          <div class="videoWrapper">
+            <!-- YouTube video -->
+            <iframe src="https://www.youtube.com/embed/5FAqJnGNpdw" allowfullscreen></iframe>
+          </div>
+        </div>
+      </li>
+    </ul>
   </div>
-
+</div>
 
 {{ $research := where (where .Site.RegularPages "Type" "research") ".Params.featured" true }}
-{{if gt (len $research) 0}}
+{{ if gt (len $research) 0 }}
 <div class="strip">
   <div class="container pt-6 pb-6 pb-md-10">
     <div class="row justify-content-start">
-      {{ $research := where (where .Site.RegularPages "Type" "research") ".Params.featured" true }}
       {{ range first 6 (sort $research ".Params.weight" "desc") }}
       <div class="col-12 col-md-4 mb-1">
         {{ .Render "summary" }}
@@ -63,10 +104,22 @@
     {{ end }}
   </div>
 </div>
+{{ end }}
 
+<!-- Splide JS Initialization -->
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    new Splide('#image-carousel', {
+      type: 'loop',  // Optional: Loop through slides
+      perPage: 1,    // Show 1 slide at a time
+      autoplay: true, // Optional: Autoplay feature
+      pagination: true, // Show pagination dots
+      arrows: true // Show navigation arrows
+    }).mount();
+  });
+</script>
 
-
-{{end}}
+</body>
 
 {{ end }}
 
