--- a/themes/hugo-serif/layouts/partials/footer.html
+++ b/themes/hugo-serif/layouts/partials/footer.html
@@ -11,6 +11,7 @@
                         }
                     </style>
                     <img src="/image/logo/wanglab_logo_2024_transparent.png" alt="Wang Lab Logo" class="logo" />
+                    <img src="/image/logo/WashU_medicine_logo_2025-no_background.png" alt="WashU Medicine Logo" class="logo" />
                     <!--<h3 class="footer-title">{{.Site.Title}}</h3>-->
                     {{ partial "footer-menu" . }}
                 </div>
