Fixed mobile header logo error

--- a/themes/hugo-serif/layouts/partials/header.html
+++ b/themes/hugo-serif/layouts/partials/header.html
@@ -19,9 +19,9 @@
         <img height="{{ .Site.Params.logo.desktop_height }}" src="/image/logo/WashU_medicine_logo_2025-no_background.png" alt="WashU Medicine Logo"/>
       </a>
     </div>
-    <div class="logo-mobile">
-      <a href="{{ .Site.BaseURL }}"><img height={{ .Site.Params.logo.mobile_height }} alt="{{ .Site.Params.logo.alt }}" src="{{ .Site.Params.logo.mobile | relURL }}" /></a>
-    </div>
+<!--    <div class="logo-mobile">-->
+<!--      <a href="{{ .Site.BaseURL }}"><img height={{ .Site.Params.logo.mobile_height }} alt="{{ .Site.Params.logo.alt }}" src="{{ .Site.Params.logo.mobile | relURL }}" /></a>-->
+<!--    </div>-->
     {{ partial "main-menu.html" . }}
     {{ partial "hamburger.html" . }}
     <script type="text/javascript" src="https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js"></script>
