--- a/themes/hugo-serif/layouts/_default/baseof.html
+++ b/themes/hugo-serif/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
             {{ block "title" . }}{{ .Params.meta_title | default (printf "%s - %s" .Title .Site.Title) }}{{ end }}
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/png" href="{{ /image/logo/favicon.png | relURL }}"> {{ partial
+        <link rel="icon" type="image/png" href={{"/image/logo/favicon.png" | relURL }}> {{ partial
         "google-fonts.html" . }}
 
         <!-- CSS-->
