--- a/themes/hugo-serif/layouts/partials/google-tag-manager.html
+++ b/themes/hugo-serif/layouts/partials/google-tag-manager.html
@@ -1,4 +1,4 @@
-{{ if hugo.IsProduction }}
+{{- if and (isset hugo "IsServer") (not hugo.IsServer) hugo.IsProduction -}}
 {{ with getenv "HUGO_GTM_ID" | default .Site.Params.google_tag_manager_id }}
 <!-- Google Tag Manager -->
 <script>
@@ -15,4 +15,4 @@
 </script>
 <!-- End Google Tag Manager -->
 {{ end }}
-{{ end }}
+{{- end }}
