--- a/layouts/team/list.html
+++ b/layouts/team/list.html
@@ -56,8 +56,10 @@
 
 <div class="bottom-component">
     <div class="container">
+        <h2 style="text-align: center">2025</h2>
+        <img src="https://wang.wustl.edu/images/Summer2025/DSC02955.jpg" alt="2025" class="responsive" />
         <h2 style="text-align: center">2024</h2>
-        <img src="https://wang.wustl.edu/images/WangLab2024.jpg" alt="2023" class="responsive" />
+        <img src="https://wang.wustl.edu/images/WangLab2024.jpg" alt="2024" class="responsive" />
         <h2 style="text-align: center">2023</h2>
         <img src="https://wang.wustl.edu/images/WangLab2023.jpg" alt="2023" class="responsive" />
         <h2 style="text-align: center">2022</h2>
