--- a/themes/hugo-serif/layouts/index.html
+++ b/themes/hugo-serif/layouts/index.html
@@ -71,15 +71,15 @@
             <iframe src="https://www.youtube.com/embed/5FAqJnGNpdw" allowfullscreen></iframe>
           </div>
         </div>
-      </li>
-      <li class="splide__slide">
-        <div class="container">
-          <div class="videoWrapper">
-            <!-- YouTube video -->
-            <iframe src="https://www.youtube.com/embed/BiR0C8DpleU" allowfullscreen></iframe>
-          </div>
-        </div>
-      </li>
+<!--      </li>-->
+<!--      <li class="splide__slide">-->
+<!--        <div class="container">-->
+<!--          <div class="videoWrapper">-->
+<!--            &lt;!&ndash; YouTube video &ndash;&gt;-->
+<!--            <iframe src="https://www.youtube.com/embed/BiR0C8DpleU" allowfullscreen></iframe>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </li>-->
     </ul>
   </div>
 </div>
